GPencil "Arrange Strokes" operator does not work in multiframe #65591

Closed
opened 2019-06-07 09:07:11 +02:00 by Sam Brubaker · 3 comments

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: aa003c7324, type: Release
build date: 2019-06-07, 00:08:40
platform: Linux

Multiframe Bug.blend

How to reproduce:

  • Open the file and inspect the animation
  • Select all the keyframes
  • Enter edit mode
  • With multiframe edit enabled, select all the strokes for all the frames of one of the two fishes

Using "Arrange Strokes", try to switch the fishes so the red fish passes in front of the blue fish

The operator only works on the stroke for the current frame.

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: aa003c73245f, type: Release build date: 2019-06-07, 00:08:40 platform: Linux [Multiframe Bug.blend](https://archive.blender.org/developer/F7091404/Multiframe_Bug.blend) How to reproduce: - Open the file and inspect the animation - Select all the keyframes - Enter edit mode - With multiframe edit enabled, select all the strokes for all the frames of one of the two fishes # Using "Arrange Strokes", try to switch the fishes so the red fish passes in front of the blue fish The operator only works on the stroke for the current frame.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Antonio Vazquez self-assigned this 2019-06-07 11:17:04 +02:00

This issue was referenced by 3ebee7c496

This issue was referenced by 3ebee7c496c649592841fbc388b15ef161b5e10e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez changed title from "Arrange Strokes" operator does not work in multiframe to GPencil "Arrange Strokes" operator does not work in multiframe 2019-06-07 11:52:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65591
No description provided.