Fix T65591: GPencil Arrange Strokes operator does not work in multiframe